kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
# HTTPRoute for Prometheus
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  annotations:
    gatus.home-operations.com/endpoint: |
      group: observability
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/name: Prometheus
    gethomepage.dev/group: Observability
spec:
  hostnames:
    - "prometheus.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
# HTTPRoute for Alertmanager
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  annotations:
    gatus.home-operations.com/endpoint: |
      group: observability
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: alertmanager.png
    gethomepage.dev/name: Alert-Manager
    gethomepage.dev/group: Observability
spec:
  hostnames:
    - "alertmanager.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
